# charity_campaign

./: Anchor.toml
programs/charity-campaign/: Cargo.toml
programs/charity-campaign/src/: lib.rs
tests/: charity-campaign.ts
