[package]
name = "charity-campaign"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "charity_campaign"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.1"
anchor-spl = {version = "0.24.1"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}